# code-search-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yaml  release.yaml
Formula/: codes.rb
bucket/: codes.json
queries/go/: references.scm  symbols.scm
queries/python/: references.scm  symbols.scm
queries/rust/: references.scm  symbols.scm
queries/typescript/: references.scm  symbols.scm
scripts/: install.ps1  install.sh
src/: cli.rs  main.rs
src/command/: clear_cache.rs  definition.rs  index.rs  mod.rs  overview.rs  references.rs  skill.rs  symbols.rs
src/core/: cache.rs  discover.rs  error.rs  language.rs  mod.rs  output.rs  parser.rs  query.rs  repo.rs  symbol.rs
src/lang/: go.rs  mod.rs  python.rs  rust.rs  typescript.rs
tests/fixtures/: sample.go  sample.py  sample.rs  sample.ts
