[package]
name = "code-search-cli"
version = "0.1.0"
edition = "2021"
description = "Tree-sitter based local code search CLI"
license = "MIT"
repository = "https://github.com/4fuu/code-search-cli"
homepage = "https://github.com/4fuu/code-search-cli"
readme = "README.md"

[[bin]]
name = "codes"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
streaming-iterator = "0.1"
rayon = "1"
bincode = "1"
